Creato con Colaboratory

--- a/Policy_Gradient_With_Gym_MiniGrid.ipynb
+++ b/Policy_Gradient_With_Gym_MiniGrid.ipynb
@@ -11,41 +11,22 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "# Policy Gradient With Gym MiniGrid"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ESJzPtLgMX-d",
-        "outputId": "8dc9b88f-e777-4534-cf03-00a6f75fb1a8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
+        "id": "kIek4sQgUX5e"
+      }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import os\n",
-        "path = \"/content/gdrive/MyDrive/Colab Notebooks/social robotics/project\"\n",
-        "os.chdir(path)"
+        "## Setup the environment"
       ],
       "metadata": {
-        "id": "BVgOqci2NZsb"
-      },
-      "execution_count": 3,
-      "outputs": []
+        "id": "BKeXlS1TUzTn"
+      }
     },
     {
       "cell_type": "code",
@@ -54,12 +35,12 @@
       ],
       "metadata": {
         "id": "__c32y1rJbTR",
-        "outputId": "21ce0529-3855-498a-dd10-0c8c2d33fc9b",
+        "outputId": "a5bb303e-f64e-4d1a-aaa7-bb84df095031",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,19 +49,19 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting gym==0.22\n",
             "  Downloading gym-0.22.0.tar.gz (631 kB)\n",
-            "\u001b[K     |████████████████████████████████| 631 kB 6.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 631 kB 3.1 MB/s \n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (1.21.6)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (1.5.0)\n",
             "Requirement already satisfied: gym-notices>=0.0.4 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (0.0.8)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (1.5.0)\n",
             "Requirement already satisfied: importlib-metadata>=4.10.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (4.13.0)\n",
+            "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.7/dist-packages (from gym==0.22) (1.21.6)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.10.0->gym==0.22) (3.10.0)\n",
             "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.10.0->gym==0.22) (4.1.1)\n",
             "Building wheels for collected packages: gym\n",
             "  Building wheel for gym (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gym: filename=gym-0.22.0-py3-none-any.whl size=708394 sha256=3c6946bd31d2ce145c89a0d4c2fc6b499fe15c4d971be9128143d340a8e95058\n",
+            "  Created wheel for gym: filename=gym-0.22.0-py3-none-any.whl size=708397 sha256=875f5820c8da56c0554e3f8b7a14b15c0ad7b1d7e885423c36964567a8de7784\n",
             "  Stored in directory: /root/.cache/pip/wheels/7d/5e/87/7d50e0179edda70feff5bba05c381041e1c1fd80c6b06a4cc3\n",
             "Successfully built gym\n",
             "Installing collected packages: gym\n",
@@ -100,12 +81,12 @@
       ],
       "metadata": {
         "id": "VY_zeN60JtBR",
-        "outputId": "28120672-1854-40b1-cfd0-fafef1c70d6f",
+        "outputId": "c092423e-e579-4fbf-e896-5d960faa9c2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,11 +95,11 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting gym-minigrid==1.0.0\n",
             "  Downloading gym_minigrid-1.0.0-py3-none-any.whl (43 kB)\n",
-            "\u001b[K     |████████████████████████████████| 43 kB 1.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 43 kB 1.4 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.15.0 in /usr/local/lib/python3.7/dist-packages (from gym-minigrid==1.0.0) (1.21.6)\n",
             "Requirement already satisfied: gym>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from gym-minigrid==1.0.0) (0.22.0)\n",
-            "Requirement already satisfied: importlib-metadata>=4.10.0 in /usr/local/lib/python3.7/dist-packages (from gym>=0.9.6->gym-minigrid==1.0.0) (4.13.0)\n",
             "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym>=0.9.6->gym-minigrid==1.0.0) (1.5.0)\n",
+            "Requirement already satisfied: importlib-metadata>=4.10.0 in /usr/local/lib/python3.7/dist-packages (from gym>=0.9.6->gym-minigrid==1.0.0) (4.13.0)\n",
             "Requirement already satisfied: gym-notices>=0.0.4 in /usr/local/lib/python3.7/dist-packages (from gym>=0.9.6->gym-minigrid==1.0.0) (0.0.8)\n",
             "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.10.0->gym>=0.9.6->gym-minigrid==1.0.0) (4.1.1)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.10.0->gym>=0.9.6->gym-minigrid==1.0.0) (3.10.0)\n",
@@ -156,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "L35hV9U3JQVD"
       },
@@ -194,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "-0DQRfvIJQVF",
         "outputId": "eb0d593c-a97e-4187-cff5-5aac904df709",
@@ -251,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "WC6NkKHwJQVG",
         "outputId": "d08040f8-1821-40c9-a1fe-976298cbde14",
@@ -377,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "s3G49XCQJQVH"
       },
@@ -414,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "NjuSE-i0JQVH"
       },
@@ -476,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "inyxGR6vJQVI",
         "outputId": "989ad9a0-f58d-4bb8-fcec-1d41861a5817",
@@ -550,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "TttQ5XbxJQVI"
       },
@@ -587,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "EnncairVJQVJ"
       },
@@ -614,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "eWgM0xujJQVJ",
         "outputId": "477682d6-de47-4498-a6f5-a57a63b5c6d0",
@@ -718,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "4J6UZToLJQVJ"
       },
@@ -812,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "z0AvBgxQJQVK"
       },
@@ -851,7 +832,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +866,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,12 +1007,12 @@
       "metadata": {
         "id": "Qdna_E5aOJLl"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "wDdUKqIWJQVK"
       },
@@ -1094,7 +1075,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "KSWxts3jJQVK"
       },
@@ -1181,7 +1162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "KBAtZo1gJQVL"
       },
@@ -1210,7 +1191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "bAQRL0dJJQVL"
       },
@@ -1237,7 +1218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "t-swYmm4JQVL",
         "colab": {
@@ -1263,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "sq1JjxgxJQVL",
         "colab": {
